apps/gpt-api/overlays/staging/gpt-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpt-api
spec:
  rules:
    - host: chat.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: gpt-api
                port:
                  number: 8000
            path: /gpt-api
            pathType: Prefix
  tls:
    - hosts:
        - chat.contextsuite.com
      secretName: star-contextsuite-com
